--- a/tracker/tracker_presentation/src/main/res/values/strings.xml
+++ b/tracker/tracker_presentation/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="lunch">Lunch</string>
     <string name="dinner">Dinner</string>
     <string name="snacks">Snacks</string>
+
+    <string name="your_goal">Your goal:</string>
+    <string name="delete">Delete</string>
+    <string name="kcal">kcal</string>
+    <string name="carbs">Carbs</string>
+    <string name="protein">Protein</string>
+    <string name="fat">Fat</string>
+    <string name="grams">Grams</string>
 </resources>
